<?xml version="1.0" encoding="utf-8"?>
<com.stveo.stevebowling.budget.Views.RegisterView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/username_field"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_field"
        android:hint="@string/e_mail_address"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_field"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirm_field"
        android:hint="@string/confirm_password"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_button"
        android:layout_gravity="center_horizontal" />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_gravity="center_horizontal"
        android:id="@+id/spinner"
        android:visibility="gone"/>
</com.stveo.stevebowling.budget.Views.RegisterView>